--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -15,3 +15,7 @@ steps:
       arguments: '-o $(Build.ArtifactStagingDirectory)/Output'
       zipAfterPublish: true
       modifyOutputPath: true
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathToPublish: $(Build.ArtifactStagingDirectory)/Output
+      artifactName: NopOutputs 
