--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,6 +1,10 @@
 ---
-trigger:
-  - develop
+schedules:
+  - cron: '0 21 * * 1-5'
+    displayName: nightlyBuild
+    branches:
+      include:
+        - release
 
 
 stages:
